--- a/Mealmate.Admin/Views/Shared/MainMenu.cshtml
+++ b/Mealmate.Admin/Views/Shared/MainMenu.cshtml
@@ -68,16 +68,7 @@
                         <span class="svg-icon menu-icon">
                             <i class="fa fa-clipboard"></i>
                         </span>
-                        <span class="menu-text">Menu Types</span>
-                    </a>
-                </li>
-                <li class="menu-item" aria-haspopup="true">
-                    <a href="#"
-                       class="menu-link">
-                        <span class="svg-icon menu-icon">
-                            <i class="fa fa-th-list"></i>
-                        </span>
-                        <span class="menu-text">Ingredients</span>
+                        <span class="menu-text">Menus</span>
                     </a>
                 </li>
                 <li class="menu-item" aria-haspopup="true">
