--- a/Mealmate.Admin/Areas/Admin/Views/Menu/Create.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Menu/Create.cshtml
@@ -163,7 +163,7 @@
                     <div class="card-header flex-wrap border-0 pt-6 pb-0">
                         <div class="card-title">
                             <h3 class="card-label">
-                                Create New Menu
+                                Create New Menu Item
                                 <span class="d-block text-muted pt-2 font-size-sm">
                                     Register a menu in restaurant
                                 </span>
@@ -175,30 +175,65 @@
                     <div class="card-body">
 
                         <div class="row form-group">
-                            <div class="col-md-6">
-                                <label class="col-form-label font-weight-bolder">Branch &amp; Hall</label>
-                                <select class="custom-select" asp-for="HallId" asp-items="Model.Halls">
-                                    <option value="">Select From List</option>
-                                </select>
+                            <div class="col-md-2">
+                                <div class="col-md-12 mb-5">
+                                    @*<label class="col-form-label font-weight-bolder">Select an image for the menu item</label>*@
+
+                                    <div class="image-input image-input-outline" id="kt_image_5" style="background-image: url(/images/dish.jpeg)">
+                                        <div class="image-input-wrapper" style="background-image: none;"></div>
+                                        <label class="btn btn-xs btn-icon btn-circle btn-white btn-hover-text-primary btn-shadow" data-action="change" data-toggle="tooltip" title="" data-original-title="Change avatar">
+                                            <i class="fa fa-pen icon-sm text-muted"></i>
+                                            <input type="file" name="profile_avatar" accept=".png, .jpg, .jpeg">
+                                            <input type="hidden" name="profile_avatar_remove" value="0">
+                                        </label>
+                                        <span class="btn btn-xs btn-icon btn-circle btn-white btn-hover-text-primary btn-shadow" data-action="cancel" data-toggle="tooltip" title="" data-original-title="Cancel avatar">
+                                            <i class="ki ki-bold-close icon-xs text-muted"></i>
+                                        </span>
+                                        <span class="btn btn-xs btn-icon btn-circle btn-white btn-hover-text-primary btn-shadow" data-action="remove" data-toggle="tooltip" title="" data-original-title="Remove avatar">
+                                            <i class="ki ki-bold-close icon-xs text-muted"></i>
+                                        </span>
+                                    </div>
+                                    <span class="form-text text-muted">Image for the Menu item</span>
+                                </div>
                             </div>
-                            <div class="col-md-6">
-                                <label class="col-form-label font-weight-bolder">Menu Type</label>
-                                <select class="custom-select" asp-for="MenuTypeId" asp-items="Model.MenuTypes">
-                                    <option value="">Select From List</option>
-                                </select>
+                            <div class="col-md-10">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label class="col-form-label font-weight-bolder">Branch &amp; Location</label>
+                                        <select class="custom-select" asp-for="LocationId" asp-items="Model.Locations">
+                                            <option value="">Select From List</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label class="col-form-label font-weight-bolder">Menu</label>
+                                        <select class="custom-select" asp-for="MenuTypeId" asp-items="Model.MenuTypes">
+                                            <option value="">Select From List</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <label class="col-form-label font-weight-bolder">Name</label>
+                                        <input type="text" asp-for="Title" class="form-control" />
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-md-12">
-                                <label class="col-form-label font-weight-bolder">Name</label>
-                                <input type="text" asp-for="Title" class="form-control" />
-                            </div>
+                        </div>
+
+                        <div class="row form-group">
+                            
+                            
 
                             <div class="col-md-12">
                                 <label class="col-form-label font-weight-bolder">Description</label>
                                 <textarea type="text" asp-for="Description" class="form-control" rows="4"></textarea>
                             </div>
+                            <div class="col-md-12">
+                                <label class="col-form-label font-weight-bolder">Price</label>
+                                <input type="text" class="form-control" />
+                            </div>
                             <div class="col-lg-12 col-md-12 mt-5">
                                 <h6 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Allergens</h6>
                             </div>
+
                             <div class="col-lg-12 col-md-12">
                                 <div class="kt-checkbox-inline">
                                     @for (int i = 0; i < Model.Allergens.Count; i++)
@@ -244,7 +279,7 @@
                     <div class="card-header flex-wrap border-0 pt-6 pb-0">
                         <div class="card-title">
                             <h3 class="card-label">
-                                Menu Items
+                                Menu Item Options
                                 <span class="d-block text-muted pt-2 font-size-sm">
                                     Menu items in this menu
                                 </span>
@@ -270,7 +305,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <div class="alert alert-custom alert-notice alert-light-primary fade show" role="alert">
+                        <div class="alert alert-custom alert-notice alert-light-primary fade show mb-5" role="alert">
                             <div class="alert-icon"><i class="flaticon-warning"></i></div>
                             <div class="alert-text">
                                 Click on <strong>New Record</strong> to create a new menu item.
@@ -363,6 +398,38 @@
                 //    $("#BtnSaveChanges").hide();
                 //}
 
+            });
+
+            var avatar5 = new KTImageInput('kt_image_5');
+
+            avatar5.on('cancel', function (imageInput) {
+                swal.fire({
+                    title: 'Image successfully changed !',
+                    type: 'success',
+                    buttonsStyling: false,
+                    confirmButtonText: 'Awesome!',
+                    confirmButtonClass: 'btn btn-primary font-weight-bold'
+                });
+            });
+
+            avatar5.on('change', function (imageInput) {
+                swal.fire({
+                    title: 'Image successfully changed !',
+                    type: 'success',
+                    buttonsStyling: false,
+                    confirmButtonText: 'Awesome!',
+                    confirmButtonClass: 'btn btn-primary font-weight-bold'
+                });
+            });
+
+            avatar5.on('remove', function (imageInput) {
+                swal.fire({
+                    title: 'Image successfully removed !',
+                    type: 'error',
+                    buttonsStyling: false,
+                    confirmButtonText: 'Got it!',
+                    confirmButtonClass: 'btn btn-primary font-weight-bold'
+                });
             });
         })
     </script>
