--- a/Mealmate.Admin/Areas/Admin/Views/Menu/Index.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Menu/Index.cshtml
@@ -229,8 +229,8 @@
                         <!--end::Dropdown-->
                         <!--begin::Button-->
                         <a asp-area="Admin" asp-controller="Menu" asp-action="Create"
-                                data-toggle="ajax-modal-user" id="BtnNewMenu"
-                                class="btn btn-primary font-weight-bolder">
+                           data-toggle="ajax-modal-user" id="BtnNewMenu"
+                           class="btn btn-primary font-weight-bolder">
                             <span class="svg-icon svg-icon-md">
                                 <!--begin::Svg Icon | path:assets/media/svg/icons/Design/Flatten.svg-->
                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
@@ -253,14 +253,14 @@
                         <div class="row align-items-center">
                             <div class="col-12">
                                 <div class="row align-items-center">
-                                    <div class="col-lg-12 col-md-12">
-                                        <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Branch</h5>
-                                        <select class="custom-select" asp-for="BranchId" asp-items="Model.Branches">
+                                    <div class="col-lg-12 col-md-12 mt-5">
+                                        <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Branch &amp; Location</h5>
+                                        <select class="custom-select" asp-for="LocationId" asp-items="Model.Locations">
                                             <option value="">Select From List</option>
                                         </select>
                                     </div>
                                     <div class="col-lg-12 col-md-12 mt-5">
-                                        <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Menu Types</h5>
+                                        <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Menus</h5>
                                     </div>
                                     <div class="col-lg-12 col-md-12">
                                         <div class="kt-checkbox-inline">
@@ -279,25 +279,25 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-lg-12 col-md-12 mt-5">
-                                        <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Ingredients</h5>
-                                    </div>
-                                    <div class="col-lg-12 col-md-12">
-                                        <div class="kt-checkbox-inline">
-                                            @for (int i = 0; i < Model.Ingredients.Count; i++)
-                                            {
-
-                                                <label class="checkbox mr-4">
-                                                    <input type="checkbox" asp-for="@Model.Ingredients[i].IsSelected">
-                                                    @Model.Ingredients[i].Name
-                                                    <span></span>
-                                                </label>
-
-                                                <input type="hidden" asp-for="@Model.Ingredients[i].IngredientId" />
-                                                <input type="hidden" asp-for="@Model.Ingredients[i].Name" />
-                                            }
+                                    @*<div class="col-lg-12 col-md-12 mt-5">
+                                            <h5 style="border-bottom: 1px solid rgba(0,0,0, 0.1); padding-bottom: 5px;">Ingredients</h5>
                                         </div>
-                                    </div>
+                                        <div class="col-lg-12 col-md-12">
+                                            <div class="kt-checkbox-inline">
+                                                @for (int i = 0; i < Model.Ingredients.Count; i++)
+                                                {
+
+                                                    <label class="checkbox mr-4">
+                                                        <input type="checkbox" asp-for="@Model.Ingredients[i].IsSelected">
+                                                        @Model.Ingredients[i].Name
+                                                        <span></span>
+                                                    </label>
+
+                                                    <input type="hidden" asp-for="@Model.Ingredients[i].IngredientId" />
+                                                    <input type="hidden" asp-for="@Model.Ingredients[i].Name" />
+                                                }
+                                            </div>
+                                        </div>*@
 
                                     <div class="col-12 mt-5 mt-lg-2 ">
                                         <a href="#" class="btn btn-light-primary px-6 font-weight-bold float-right"
