--- a/Mealmate.Admin/Areas/Admin/Views/Shared/Components/MenuList/Default.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Shared/Components/MenuList/Default.cshtml
@@ -13,9 +13,12 @@
                     <span></span>
                 </label>
             </th>
-            <th title="Field #1">Menu</th>
-            <th title="Field #2">Menu Type</th>
-            <th title="Field #3">Statue</th>
+            <th title="Field #2">Menu</th>
+            <th title="Field #1">Image</th>
+            <th title="Field #1">Menu Item</th>
+            <th title="Field #1">Price</th>
+            <th title="Field #1">Branch &amp; Location</th>
+            <th title="Field #3">Status</th>
             <th title="Field #4">Actions</th>
         </tr>
     </thead>
@@ -24,76 +27,97 @@
         {
             var StateBadge = item.MenuStateId == 1 ? "success" : "danger";
             var State = item.MenuStateId == 1 ? "Active" : "Passive";
-            <tr>
-                <td>
-                    <label class="kt-checkbox kt-checkbox--single kt-checkbox--solid">
-                        <input type="checkbox" value="" class="kt-checkable">
-                        <span></span>
-                    </label>
-                </td>
-                <td>
-                    <div>
-                        @item.Title
-                    </div>
-                    <div class="small">
-                        <strong>
-                            Dietaries
-                        </strong>
-                        
-                        <span>
-                            Gluten, Free, Celiac, Vegetarian, Vegan
-                        </span>
-                    </div>
-                    <div class="small">
-                        <strong>
-                            Allergens
-                        </strong>
-                        <span>
-                            Egg, Celery, Fish, Lupin, Milk
-                        </span>
-                    </div>
-                </td>
-                <td>
-                    @item.MenuType
-                </td>
-                <td>
-                    <span class="label label-lg font-weight-bold label-light-@StateBadge label-inline">
-                        @State
+        <tr>
+            <td>
+                <label class="kt-checkbox kt-checkbox--single kt-checkbox--solid">
+                    <input type="checkbox" value="" class="kt-checkable">
+                    <span></span>
+                </label>
+            </td>
+            <td>
+                @item.MenuType
+            </td>
+            <td class="p-0">
+                <div class="symbol symbol-50 symbol-light mt-1">
+                    <span class="symbol-label">
+                        <img src="~/images/dish.jpeg" class="h-100 w-100 align-self-end img-fluid" alt="" />
                     </span>
-                </td>
-                <td>
-                    <a asp-area="Admin" asp-controller="Menu" asp-action="Ingredient"
+                </div>
+            </td>
+            <td>
+                <div>
+                    @item.Title
+                </div>
+                <div class="small">
+                    <strong>
+                        Dietaries
+                    </strong>
+
+                    <span>
+                        Gluten, Free, Celiac, Vegetarian, Vegan
+                    </span>
+                </div>
+                <div class="small">
+                    <strong>
+                        Allergens
+                    </strong>
+                    <span>
+                        Egg, Celery, Fish, Lupin, Milk
+                    </span>
+                </div>
+            </td>
+            <td>
+                250
+            </td>
+            <td class="text-left">
+                <div>
+                    @item.Location
+                </div>
+                <div class="small">
+                    <span>
+                        @item.Branch
+                    </span>
+                </div>
+            </td>
+
+            <td>
+                <span class="label label-lg font-weight-bold label-light-@StateBadge label-inline">
+                    @State
+                </span>
+            </td>
+            <td>
+                <a asp-area="Admin" asp-controller="Menu" asp-action="Ingredient"
+                   data-id="@item.MenuId"
+                   class="btn btn-sm btn-clean btn-icon btn-icon-md js-ingredient" title="Ingredients">
+                    <i class="fa fa-cogs text-warning"></i>
+                </a>
+
+                <a asp-area="Admin" asp-controller="Menu" asp-action="Update"
+                   asp-route-id="@item.MenuId"
+                   class="btn btn-sm btn-clean btn-icon btn-icon-md js-update" title="Edit">
+                    <i class="fa fa-pencil-alt"></i>
+                </a>
+
+                @if (item.MenuStateId == 1)
+                {
+                    <a asp-area="Admin" asp-controller="Menu" asp-action="Toggle"
                        data-id="@item.MenuId"
-                       class="btn btn-sm btn-clean btn-icon btn-icon-md js-ingredient" title="Ingredients">
-                        <i class="fa fa-cogs text-warning"></i>
+                       class="btn btn-sm btn-clean btn-icon btn-icon-md js-toggle"
+                       title="Set passive">
+                        <i class="fa fa-thumbs-down text-danger"></i>
                     </a>
-
-                    <a asp-area="Admin" asp-controller="Menu" asp-action="Update"
-                       asp-route-id="@item.MenuId"
-                       class="btn btn-sm btn-clean btn-icon btn-icon-md js-update" title="Edit">
-                        <i class="fa fa-pencil-alt"></i>
+                }
+                else
+                {
+                    <a asp-area="Admin" asp-controller="Menu" asp-action="Toggle"
+                       data-id="@item.MenuId"
+                       class="btn btn-sm btn-clean btn-icon btn-icon-md js-toggle"
+                       title="Set active">
+                        <i class="fa fa-thumbs-up text-success"></i>
                     </a>
-
-                    @if (item.MenuStateId == 1)
-                    {
-                        <a asp-area="Admin" asp-controller="Menu" asp-action="Toggle"
-                           data-id="@item.MenuId"
-                           class="btn btn-sm btn-clean btn-icon btn-icon-md js-toggle"
-                           title="Set passive">
-                            <i class="fa fa-thumbs-down text-danger"></i>
-                        </a>
-                    }
-                    else
-                    {
-                        <a asp-area="Admin" asp-controller="Menu" asp-action="Toggle"
-                           data-id="@item.MenuId"
-                           class="btn btn-sm btn-clean btn-icon btn-icon-md js-toggle"
-                           title="Set active">
-                            <i class="fa fa-thumbs-up text-success"></i>
-                        </a>
-                    }
-                </td>
-            </tr>
+                }
+            </td>
+        </tr>
         }
     </tbody>
 </table>
