--- a/Mealmate.Admin/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @using Mealmate.Admin.Areas.Admin.ViewModels
+
+@using Microsoft.AspNetCore.Identity
+@using Mealmate.Entities.Identity
+
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
