--- a/Mealmate.Admin/Areas/Restaurant/Views/Shared/_Layout.cshtml
+++ b/Mealmate.Admin/Areas/Restaurant/Views/Shared/_Layout.cshtml
@@ -1,16 +1,4 @@
-﻿<!--
-Template Name: Metronic - Bootstrap 4 HTML, React, Angular 9 & VueJS Admin Dashboard Theme
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Dribbble: www.dribbble.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase: https://1.envato.market/EA4JP
-Renew Support: https://1.envato.market/EA4JP
-License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
--->
-<html lang="en">
+﻿<html lang="en">
 <!--begin::Head-->
 <head>
     <base href="">
@@ -110,7 +98,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <div class="topbar-item" data-toggle="dropdown" data-offset="0px,0px">
                                     <div class="btn btn-icon btn-hover-transparent-white d-flex align-items-center btn-lg px-md-2 w-md-auto">
                                         <span class="text-white opacity-70 font-weight-bold font-size-base d-none d-md-inline mr-1">Hi,</span>
-                                        <span class="text-white opacity-90 font-weight-bolder font-size-base d-none d-md-inline mr-4">John Doe</span>
+                                        <span class="text-white opacity-90 font-weight-bolder font-size-base d-none d-md-inline mr-4">@UserManager.FindByEmailAsync(Context.User.Identity.Name).Result.Name</span>
                                     </div>
                                 </div>
                                 <!--end::Toggle-->
@@ -124,7 +112,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         </div>
                                         <!--end::Symbol-->
                                         <!--begin::Text-->
-                                        <div class="text-dark m-0 flex-grow-1 mr-3 font-size-h5">John Doe</div>
+                                        <div class="text-dark m-0 flex-grow-1 mr-3 font-size-h5">@UserManager.FindByEmailAsync(Context.User.Identity.Name).Result.Name</div>
                                         <span class="label label-light-success label-lg font-weight-bold label-inline">3 messages</span>
                                         <!--end::Text-->
                                     </div>
