--- a/Mealmate.Admin/Views/_ViewImports.cshtml
+++ b/Mealmate.Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
 @using Mealmate.Admin.ViewModels
+@using Microsoft.AspNetCore.Identity
+@using Mealmate.Entities.Identity
+
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
