--- a/Mealmate.Admin/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Mealmate.Admin/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
                                 <div class="topbar-item" data-toggle="dropdown" data-offset="0px,0px">
                                     <div class="btn btn-icon btn-hover-transparent-white d-flex align-items-center btn-lg px-md-2 w-md-auto">
                                         <span class="text-white opacity-70 font-weight-bold font-size-base d-none d-md-inline mr-1">Hi,</span>
-                                        <span class="text-white opacity-90 font-weight-bolder font-size-base d-none d-md-inline mr-4">@UserManager.FindByEmailAsync(Context.User.Identity.Name).Result.Name</span>
+                                        <span class="text-white opacity-90 font-weight-bolder font-size-base d-none d-md-inline mr-4">John Doe </span>
                                     </div>
                                 </div>
                                 <!--end::Toggle-->
@@ -112,7 +112,7 @@
                                         </div>
                                         <!--end::Symbol-->
                                         <!--begin::Text-->
-                                        <div class="text-dark m-0 flex-grow-1 mr-3 font-size-h5">@UserManager.FindByEmailAsync(Context.User.Identity.Name).Result.Name</div>
+                                        <div class="text-dark m-0 flex-grow-1 mr-3 font-size-h5">John Doe </div>
                                         <span class="label label-light-success label-lg font-weight-bold label-inline">3 messages</span>
                                         <!--end::Text-->
                                     </div>
